tracker/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tracker-service
spec:
  selector:
    app: tracker-app
  ports:
  - port: 5000
    targetPort: 5000
